--- a/gb/1/8/14/n119179.md
+++ b/gb/1/8/14/n119179.md
@@ -3,61 +3,59 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>美国务院对日首相参拜靖国神社不予评论</h2>
 <h6></h6>
-	<p><font color=#ffffff>(http://www.epochtimes.com)</font><br />【大纪元8月14日讯】 美国国务院今天对日本首相小泉纯一郎前往靖国神社参拜一事不愿发表<ahref=http://www3.epochtimes.com/news/epochnews/main/8.md#1><font color=blue>评论</font></A>，国务院副发言人黎克说，美国政府过去也未曾就此类问题表达看法。 </p>
-<p>在国务院今天的例行简报中，两度有记者提出和小泉这项引起东亚数国批评的举动相关的问题，但黎克都不愿表示意见。<font color=#ffffff>(http://www.dajiyuan.com)</font></p>
 <hr>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;<B><FONTCOLOR=red>相关文章</FONT></B><br /> &nbsp;&nbsp;&nbsp;&nbsp; </p>
-<li> <A HREF=newscontent.asp?ID=119117 target=_blank class=ltnn>美日高级官员会晤</a> (8/13/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=newscontent.asp?ID=118483 target=_blank class=ltnn>德总理抱怨美日经济疲软令德国失业率居高不下</a> (8/11/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=newscontent.asp?ID=117345 target=_blank class=ltnn>吕秀莲:世界和平.台湾发声</a> (8/8/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=newscontent.asp?ID=114530 target=_blank class=ltnn>美日外长大演“河内爱情故事”</a> (7/30/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=newscontent.asp?ID=112337 target=_blank class=ltnn>美日公司联手投资开发反黑客软件 </a> (7/24/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=newscontent.asp?ID=112268 target=_blank class=ltnn>港姐在穗反驳“智力打败美丽”说法</a> (7/24/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=newscontent.asp?ID=112169 target=_blank class=ltnn>美日支持梅加瓦蒂任总统</a> (7/23/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=newscontent.asp?ID=112076 target=_blank class=ltnn>学者说台湾可寻求成为美日联盟实质合作伙伴</a> (7/23/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=newscontent.asp?ID=109121 target=_blank class=ltnn>美国大学本科排名哈佛居首</a> (7/12/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=newscontent.asp?ID=108160 target=_blank class=ltnn>南韩经济想好转也难</a> (7/10/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=newscontent.asp?ID=108007 target=_blank class=ltnn>李怡 ： 美日关系 :“成长伙伴关系” ?</a> (7/9/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=newscontent.asp?ID=107664 target=_blank class=ltnn>日本在野党﹕美日地位协定有必要修改</a> (7/8/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=newscontent.asp?ID=107489 target=_blank class=ltnn>日本国内要求修改“美日地位协定” </a> (7/8/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=newscontent.asp?ID=105177 target=_blank class=ltnn>美日大卫营高峰会结束日本首相小泉准备返国 </a> (7/1/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=newscontent.asp?ID=105051 target=_blank class=ltnn>美日将推动新双边经贸对话机制</a> (6/30/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=newscontent.asp?ID=105019 target=_blank class=ltnn>美日领袖会晤求同存异</a> (6/30/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=newscontent.asp?ID=104844 target=_blank class=ltnn>美日领袖高峰会被视为日本经济改革承诺的试炼</a> (6/30/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=newscontent.asp?ID=104385 target=_blank class=ltnn>美日高峰会 周六相约大卫营</a> (6/28/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=newscontent.asp?ID=103249 target=_blank class=ltnn>巴媒体报导杜里荷将军曾是美国间谍</a> (6/25/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=newscontent.asp?ID=102559 target=_blank class=ltnn>美日就导弹防御和冲绳军演进行会谈</a> (6/23/2001)<br />
-	
+	<p><font color="#ffffff">(https://www.epochtimes.com)</font></p>
+<p>【大纪元8月14日讯】 美国国务院今天对日本首相小泉纯一郎前往靖国神社参拜一事不愿发表<font color="blue">评论</font>，国务院副发言人黎克说，美国政府过去也未曾就此类问题表达看法。 </p>
+<p>在国务院今天的例行简报中，两度有记者提出和小泉这项引起东亚数国批评的举动相关的问题，但黎克都不愿表示意见。<font color="#ffffff">(https://www.dajiyuan.com)</font></p>
+<p>????<b><font color="red">相关文章</font></b><br /> ???? </p>
+<li> <ahref="https://github.com/1992513/djy/blob/master/gb/1/8/13/n119117.md#1" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">美日高级官员会晤</a> (8/13/2001)???? </li>
+<li> <ahref="https://github.com/1992513/djy/blob/master/gb/1/8/11/n118483.md#1" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">德总理抱怨美日经济疲软令德国失业率居高不下</a> (8/11/2001)???? </li>
+<li> <ahref="https://github.com/1992513/djy/blob/master/gb/1/8/8/n117345.md#1" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">吕秀莲:世界和平.台湾发声</a> (8/8/2001)???? </li>
+<li> <ahref="https://github.com/1992513/djy/blob/master/gb/1/7/30/n114530.md#1" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">美日外长大演“河内爱情故事”</a> (7/30/2001)???? </li>
+<li> <ahref="https://github.com/1992513/djy/blob/master/gb/1/7/24/n112337.md#1" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">美日公司联手投资开发反黑客软件 </a> (7/24/2001)???? </li>
+<li> <ahref="https://github.com/1992513/djy/blob/master/gb/1/7/24/n112268.md#1" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">港姐在穗反驳“智力打败美丽”说法</a> (7/24/2001)???? </li>
+<li> <ahref="https://github.com/1992513/djy/blob/master/gb/1/7/23/n112169.md#1" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">美日支持梅加瓦蒂任总统</a> (7/23/2001)???? </li>
+<li> <ahref="https://github.com/1992513/djy/blob/master/gb/1/7/23/n112076.md#1" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">学者说台湾可寻求成为美日联盟实质合作伙伴</a> (7/23/2001)???? </li>
+<li> <ahref="https://github.com/1992513/djy/blob/master/gb/1/7/12/n109121.md#1" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">美国大学本科排名哈佛居首</a> (7/12/2001)???? </li>
+<li> <ahref="https://github.com/1992513/djy/blob/master/gb/1/7/10/n108160.md#1" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">南韩经济想好转也难</a> (7/10/2001)???? </li>
+<li> <ahref="https://github.com/1992513/djy/blob/master/gb/1/7/9/n108007.md#1" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">李怡 ： 美日关系 :“成长伙伴关系” ?</a> (7/9/2001)???? </li>
+<li> <ahref="https://github.com/1992513/djy/blob/master/gb/1/7/8/n107664.md#1" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">日本在野党﹕美日地位协定有必要修改</a> (7/8/2001)???? </li>
+<li> <ahref="https://github.com/1992513/djy/blob/master/gb/1/7/8/n107489.md#1" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">日本国内要求修改“美日地位协定” </a> (7/8/2001)???? </li>
+<li> <ahref="https://github.com/1992513/djy/blob/master/gb/1/7/1/n105177.md#1" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">美日大卫营高峰会结束日本首相小泉准备返国 </a> (7/1/2001)???? </li>
+<li> <ahref="https://github.com/1992513/djy/blob/master/gb/1/6/30/n105051.md#1" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">美日将推动新双边经贸对话机制</a> (6/30/2001)???? </li>
+<li> <ahref="https://github.com/1992513/djy/blob/master/gb/1/6/30/n105019.md#1" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">美日领袖会晤求同存异</a> (6/30/2001)???? </li>
+<li> <ahref="https://github.com/1992513/djy/blob/master/gb/1/6/30/n104844.md#1" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">美日领袖高峰会被视为日本经济改革承诺的试炼</a> (6/30/2001)???? </li>
+<li> <ahref="https://github.com/1992513/djy/blob/master/gb/1/6/28/n104385.md#1" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">美日高峰会 周六相约大卫营</a> (6/28/2001)???? </li>
+<li> <ahref="https://github.com/1992513/djy/blob/master/gb/1/6/25/n103249.md#1" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">巴媒体报导杜里荷将军曾是美国间谍</a> (6/25/2001)???? </li>
+<li> <ahref="https://github.com/1992513/djy/blob/master/gb/1/6/23/n102559.md#1" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">美日就导弹防御和冲绳军演进行会谈</a> (6/23/2001)</li>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/1/6/23/n102559.md#1">美日就导弹防御和冲绳军演进行会谈</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/1/6/25/n103249.md#1">巴媒体报导杜里荷将军曾是美国间谍</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/1/6/28/n104385.md#1">美日高峰会 周六相约大卫营</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/1/6/30/n104844.md#1">美日领袖高峰会被视为日本经济改革承诺的试炼</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414940.md#1">农民工讨薪 厦门象屿集团动用高压水枪驱逐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/6/n14568122.md#1">四川江油校园霸凌引发大规模抗议 海外声援</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/7/n14569378.md#1">【纪元焦点】白纸运动未远 江油抗争已起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627448.md#1">海南国企偷砍农户槟榔树 引发警民冲突</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/2/n10185727.md#1" target="_blank">“石油之父”惨遭灭门（上）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/15/n11115255.md#1" target="_blank">美国人权报告 中国章节一值得关注的进展</a></li>
+<li><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/8/n11241913.md#1" target="_blank">【征文】袁斌：中共怎样用党文化取代传统文化</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/9/1/n11491970.md#1" target="_blank">奥地利女子缘何修炼法轮功 答案让你意想不到</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/16/n14312505.md#1">【未解之谜】美国牧师濒死 惊见撒旦控制人类计划</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/15/n14311467.md#1">巴西空难前一天 灵媒直播预言：我看到坠机</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308151.md#1">香港凉茶趣谈：凉茶不“凉” 龟苓膏最初功用非“清热解毒”？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302523.md#1">【古道人生】修佛后他足跛眼盲被雷击死 这是佛无灵吗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310266.md#1">黄历七月半盂兰盆会 怎样才得以“超度”？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/20/n14314693.md#1">【时事金扫描】乌军炸三座大桥 三千俄军被包围</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/20/n14314598.md#1">【全球新闻】辽宁特大洪灾 多村失联</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/19/n14313887.md#1">【探索时分】乌克兰围攻科列涅沃</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/19/n14313544.md#1">北戴河会议后中共党魁首露面 官媒报导异常</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/18/n14313413.md#1">震惊全网 北京211大学毕业女生死在出租屋</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/18/n14313394.md#1">李佩霞被“双开” 毛奇曾说她不死也要掉层皮</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/19/n14313950.md#1">进军大银幕票房翻车 张若昀被劝回去拍剧</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/20/n14314684.md#1">成本超2亿 新版《红楼梦》上映5天票房450万</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/20/n14314301.md#1">新《超人》5个月拍完 为保视觉品质后制需1年</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/18/n14313177.md#1">乔治克隆尼：亚马逊和沃尔玛正在蚕食好莱坞</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/19/n14313732.md#1">田中千绘拿到居留证 爱卤肉饭返日待不了一周</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/19/n14313638.md#1">除了东京之外 日本这6个地方也值得一游</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/20/n14314281.md#1">不用冰箱 用这招可让番茄存放久一点</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/18/n14313114.md#1">别忽视心脏病早期微妙症状 哈佛：预防五步骤</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/17/n14312671.md#1">用力姿态不对恐至脊椎滑脱 5动作缓解腰痛</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/17/n14312682.md#1">洛神花抗癌降血压 还能美容减脂</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/26/n14643889.md#1">婚姻幸福之道：阴阳平衡 琴瑟和鸣</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650550.md#1">【未解之谜】NASA也无法解释 太阳系神秘入侵者</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652776.md#1">【军事情报局】泰柬战争升级 F-16低空轰炸</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652899.md#1">【直播】NASA为探索月球、火星所做的准备</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652954.md#1">【百年真相】半夜鸡不叫：周扒皮冤案揭秘</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651393.md#1">普渡大学为何指示院系拒收中国留学生</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651372.md#1">【直播】NASA太空人告别太空站并关闭舱门</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651371.md#1">堕胎变催育 中共黑手再次伸向中国女性</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652089.md#1">巧合还是刻意？中共官微帖文惊现“于朦胧”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651415.md#1">刘诗诗得奖遭临时撤换 主办方“爱奇艺”挨轰</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652213.md#1">张柏芝遭索赔逾千万 法庭上情绪失控崩溃痛哭</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652972.md#1">消失一年被传死讯 陆网红冯提莫自曝停工内幕</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652371.md#1">同一双袜子可以穿两次以上再洗吗？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/1/8/14/n119179.htm">美国务院对日首相参拜靖国神社不予评论</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/1/8/14/n119179.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
