--- a/gb/24/7/21/n14295110.md
+++ b/gb/24/7/21/n14295110.md
@@ -3,8 +3,7 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>陕西垮塌的桥梁启用不足6年 官方甩锅引质疑</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/07/id14294585-a03da21a7b6d9ff51993f26283bca3cc-600x400.png" />
-<h6>2024年7月19日晚，陕西商洛市一大桥发生垮塌事故。（视频截图）
-</h6>
+<h6>2024年7月19日晚，陕西商洛市一大桥发生垮塌事故。（视频截图）</h6>
 <hr>
 	<p>【大纪元2024年07月21日讯】陕西商洛市发生的大桥倒塌，车辆坠河的惨烈事故，已导致数十人死亡、失踪。面对如此惨剧，官方将原因甩锅给暴雨。而垮塌的公路仅启用不到6年时间。广大网民认为官员的托辞是在逃避责任。</p>
 <p>7月19日20时40分许，陕西省商洛市柞水县境内一座高速公路桥梁在山洪暴发期间垮塌，途经车辆在黑夜中未能发现，一架接一架从桥面缺口高速飞坠洪流，截至20日晚间，当局确认坠河车辆25辆，发现12名遇难者尸体，仍有18辆车、31人失踪。</p>
@@ -12,51 +11,46 @@
 <p>看看新闻7月21日报导，车辆坠入湍急的河中，当地村民顺着高速路斜坡，爬上断裂桥面上的高速路，在路边呐喊并挥舞衣物，试图阻挡不知前方险情的来车。因为夜晚光线昏暗加之暴雨影响，往来的车辆没能及时看见村民的警示，不断有车辆冲下断桥。现场初步判断有17辆轿车和8辆货车坠河。</p>
 <p>塌桥事故发生在位于陕南秦岭南麓的商洛市柞水县境内，穿越当地的丹宁高速（丹凤县至宁陕县）水阳段（柞水县至山阳县）路段严坪村二号桥，往山阳方向单侧垮塌，垮塌桥面长度约40米。</p>
 <p>二号桥全长366米，跨越当地的金钱河，现场相片可见，桥面发生垮塌的一侧插入湍急的洪流中，一个原支撑垮塌桥面的桥墩消失，水位距桥面仍有逾十米距离；桥面簇新，断裂面平整，有钢筋暴露在外。</p>
-<p>公开资料显示，丹宁高速是陕南地区重要交通要道，水阳段全?79公里，由陕?省陕?塌交通集桥。2018年12月通?。垮塌公路仅启用不到6年时间。</p>
+<p>公开资料显示，丹宁高速是陕南地区重要交通要道，水阳段全长79公里，由陕西省陕西塌交通集桥。2018年12月通车。垮塌公路仅启用不到6年时间。</p>
 <p>对于桥梁塌方的原因，商洛市委书记赵璟20日称，因当天暴雨导致山洪暴发、金钱河水暴涨，桥梁发生垮塌。</p>
 <p>这一说法引发了网友的广泛质疑，认为官方将责任甩锅给暴雨。这是不负责任的推诿，难以令人信服。毕竟一场暴雨就能让一座桥梁如此轻易地断裂垮塌，人们不禁怀疑桥梁的质量是否存在问题。如果桥梁在建设时能够更加坚固，能够经受住大自然的考验，或许这场悲剧就可以避免。</p>
 <p>柞水高速公路坍桥事故到底是什么原因，引发全社会广泛关注和质疑。</p>
-<p>网友质疑，如果真是暴雨洪水所致，为何周边其他桥梁没事？为什么光这一座大桥如此“脆弱”，桥面整个断裂？很明显，官方所称的“雨大”理由站不住脚。</p>
+<p>网友质疑，如果真是暴雨洪水所致，为何周边其它桥梁没事？为什么光这一座大桥如此“脆弱”，桥面整个断裂？很明显，官方所称的“雨大”理由站不住脚。</p>
 <p>有声音认为，恐怕是存在严重偷工减料的黑手在其中作祟——为了谋取暴利而违反工程质量要求，结果给桥梁埋下了祸根，终于在大雨的考验下彻底暴露出来。</p>
 <p>还有分析认为，桥面结构出现质量问题很可能与设计监理出了纰漏有关。比如抗撞性能考虑不足、受力分析失误等，都可能导致桥体承载能力不达标，雨大之后出现坍塌。</p>
 <p>“不管是施工商直接偷工减料，还是监理设计存在失误，官方都理应对此次事故负有不可推卸的责任。”另外，“作为工程建设的发包方和监管部门，他们在管理和监督工作中存在严重疏忽，才酿成了如此惨剧。”</p>
-<p>还有不少网友纷纷发帖嘲讽、揶揄。</p>
-<p>“不用问，问就是质量没问题。都是万年一遇的洪水造成的。”</p>
-<p>“质量和设计没有问题，突发极端天气导致的。”</p>
+<p>还有不少网友纷纷发帖嘲讽、揶揄。“不要问，问就是质量没问题。都是万年一遇的洪水造成的。”“质量和设计没有问题，突发极端天气导致的。”</p>
 <p>网?呼吁，应严格检查出事公路桥梁的建筑质量。</p>
 <p>陕西近期持续遭遇强降雨过程，已导致近17万人受灾。</p>
 <p>责任编辑：方晓</p>
-	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/17/8/10/n9517554.md#1">九寨沟强震 西游记取景地诺日朗瀑布垮塌</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/8/6/n14048918.md#1">黑龙江尚志洪水 千余大棚被淹 百年老桥垮塌</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/17/n14292542.md#1">陕西宝鸡暴雨倾盆 市区成河 铁路桥受损</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/19/n14294143.md#1">陕西宝鸡市连降暴雨 已致5死8失联</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645563.md#1">印尼苏门答腊岛洪灾救援困难 已致248人死</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645549.md#1">川普政府与西北大学达和解 恢复联邦补助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645423.md#1">折扣带动黑五买气 网购强劲 实体店回温</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645425.md#1">组图：斯里兰卡暴雨酿重灾 123死130失踪</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/3/7/n11922778.md?dfh#1" target="_blank">了解法轮功：见证奇迹 解开生命奥秘</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/6/18/n11329746.md#1" target="_blank">传奇总统里根（10）：一封家书承载使命</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/22/n10927324.md#1" target="_blank">跨国企业总经理修炼法轮功 受益无穷</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/12/n9947938.md#1" target="_blank">张易：批马篇（二）共产主义是贫穷的根源</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/14/4/15/n4132079.md#1" target="_blank">从唐山义女“探父蒙难”看古今对比</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14291211.md#1">【未解之谜】精准预测川普遇刺 牧师：美国将在巨大危机后复兴</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286009.md#1">菩萨赐白莲花？高僧虚云和章嘉国师的神奇经历</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287726.md#1">【古道人生】丈夫衣锦荣归 为何夫妻却不能团圆？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/10/21/n13321190.md#1">【古韵流芳】长恨歌引传奇 白居易的来世夙愿</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289400.md#1">天下第一都长安城建造多神速？超乎你想像 关键法门为何？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/19/n14294310.md#1">【新闻大家谈】中共煽动独狼攻击 苦了中国人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/17/n14292838.md#1">【百年真相】兵变随时发生？中南海两大困局</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/20/n14294475.md#1">【菁英论坛】三中全会真有事 “改革家”下架</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/19/n14293830.md#1">胡春华在三中全会上与党魁并排坐 引猜测</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/18/n14293406.md#1">火箭军参谋长落马 三中全会递补中委现异常</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/19/n14294110.md#1">四川官员的儿媳实名举报公公婆婆资产近亿</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/17/n14292855.md#1">章子怡带儿子逛商场 母子俩牵手背影画面温馨</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/19/n14294437.md#1">缺席《甄嬛传》团综 孙俪携全家游英国</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/19/n14294392.md#1">“武侠影后”郑佩佩去世 刘涛赴美送最后一程?</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/17/n14292823.md#1">赵丽颖短发造型登热搜 新发型疑为新片做准备</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/18/n14293656.md#1">大陆名嘴朱丹自曝遭骗光积蓄 案件现最新进展</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290621.md#1">怎么睡都睡不饱？中医解方消三大类疲劳</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289663.md#1">摆脱忧郁情绪 四招开胯拉筋有效</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14291153.md#1">盘点健康的香草和香料 替你的料理加分</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287362.md#1">改善关节炎 6种水果抗发炎</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/19/n14293931.md#1">发长2米多 拥有世界最长头发的女子谈护发</a></li>
-<hr>
-<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/24/7/21/n14295110.htm">陕西垮塌的桥梁启用不足6年 官方甩锅引质疑</a></p><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/7/21/n14295110.htm">陕西垮塌的桥梁启用不足6年 官方甩锅引质疑</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/7/21/n14295110.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
