--- a/gb/25/1/4/n14405764.md
+++ b/gb/25/1/4/n14405764.md
@@ -3,8 +3,7 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>拜登总统表彰纽约市消防英雄 颁授英勇勋章</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2025/01/id14405765-179833-600x400.jpg" />
-<h6>2025年1月3日，美国总统拜登于白宫椭圆形办公室颁发英勇勋章（Medal of Valor）。在仪式中获表彰的包括纽约市消防局消防员加夫尼、纽约市消防局中尉范德斯塔等人。（Anna Rose Layden/Getty Images）
-</h6>
+<h6>2025年1月3日，美国总统拜登于白宫椭圆形办公室颁发英勇勋章（Medal of Valor）。在仪式中获表彰的包括纽约市消防局消防员加夫尼、纽约市消防局中尉范德斯塔等人。（Anna Rose Layden/Getty Images）</h6>
 <hr>
 	<p>【大纪元2025年01月04日讯】（大纪元记者黄小堂纽约报导）即将卸任的美国总统拜登（Joe Biden）于1月3日举行颁奖仪式，向纽约市消防局（FDNY）的两位英雄——约翰·范德斯塔中尉（Lt. John Vanderstar）及消防员布兰登·加夫尼（Brendan Gaffney）——颁发英勇勋章，以表彰他们在纽约市的火灾现场挽救生命的英勇行为。</p>
 <h2>英勇行动</h2>
@@ -15,35 +14,34 @@
 <p>仪式中，拜登总统还向其他英勇人物颁发勋章，包括五名于2023年纳什维尔“圣约学校”（Covenant School）枪击案中果断行动的警察，以及内布拉斯加州林肯市警察图·陈（Sgt. Tu Tran），表彰其救助被困于冰冷池塘车内女性的行动。此外，拜登还将追授六名阵亡军人的荣誉勋章。</p>
 <p>此次颁奖仪式不仅彰显个人勇气，也体现了无私奉献与拯救生命的精神。◇</p>
 <p>责任编辑：郑桦</p>
-	
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/2/n14404783.md#1">拜登授予莉兹?切尼总统公民奖章</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/2/n14404815.md#1">拜登：新奥尔良与拉斯维加斯两起事件无关</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/3/n14405217.md#1">拜登阻止新日铁收购美国钢铁公司</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/4/n14405724.md#1">因应精神病患伤人事件增加 纽约州长拟修法扩大强制送医</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/3/n14689883.md#1">李文亮去世6周年 纽约华人：拒绝遗忘 追责中共</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/9/23/n11539563.md#1" target="_blank">鸿路：最后的双十节</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/7/18/n8113058.md#1" target="_blank">一位农家女的奇异经历</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/22/n10994378.md#1" target="_blank">陆文：迫害佛法最终害了自己</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/3/10/n11929991.md#1" target="_blank">斯洛伐克各界人士谴责中共迫害法轮功</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/27/n14399500.md#1">【未解之谜】被封400年 四川最神秘旅游禁地：迷魂凼</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/4/n10761555.md#1">宗泽“宗爷爷”：大宋的铁血老将</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/19/n12698527.md#1">【元曲大家】烟霞状元乔吉 散曲自成一家</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/22/n14395636.md#1">这些小善行在上天眼中并不小 天道善报不会终止！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/3/n14404856.md#1">【菁英论坛】川普就职前 对中共连出三拳</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/3/n14405619.md#1">【菁英论坛】新年出现回国潮 中国人在等待</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/3/n14405086.md#1">【新闻大家谈】中共7大危机“远洋捕捞”缘何起</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/2/n14404102.md#1">过年机票价格暴跌 最高降幅近7成 网民吐槽</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/1/n14403968.md#1">分析：中国经济背负太多过剩负担 如定时炸弹</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/2/n14404194.md#1">夏洛山：俄罗斯正在输掉无人机战争</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/31/n14403007.md#1">陆男星陈哲远跨年演出忘拿麦克风 假唱被抓包</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/1/n14403901.md#1">陆女星赵露思病倒后首发声 自曝遭前老板殴打</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/31/n14403021.md#1">陈学冬疑退圈定居美国 曾遇严重车祸满头白发</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/2/n14404803.md#1">陆明星查税风暴再起？张颂文被爆遭约谈补税</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/31/n14402980.md#1">裘莉与彼特达成离婚协议 缠斗8年官司终落幕</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/31/n14402533.md#1">杂草掰！这8样除草剂 园艺维护快速有效</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/1/n14403382.md#1">研究：每天散步1小时或可延长寿命6小时</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/1/n14403287.md#1">【旅行趣】台湾苗栗铜锣炮仗花海 点燃冬日的奇景</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/2/n14404214.md#1">为何两只脚的大小不一样？ 哪只比较大？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/29/n14400410.md#1">低脂酿性功能障碍  优质脂肪怎样选</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/31/n10101444.md#1">腊月十六为何盛大作尾牙 祭土地公迎财还迎接什么？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/6/19/n4461035.md#1">美人巨眼识穷途——读《虬髯客传》之红拂女(上)</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/29/n14686592.md#1">人物写实油画大赛入围作品欣赏——《深渊边缘》</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/6/23/n4464215.md#1">闻道长安似弈棋——读《虬髯客传》之虬髯客(下)</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/29/n14686851.md#1">立春节气要“养生”做这些事增长一年阳气</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689662.md#1">【唐青看时事】英加押宝中共 与虎谋皮</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689644.md#1">【思想领袖】你真的生病吗？药物恐惧行销真相</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689641.md#1">【直播】肯尼迪和奥兹博士探讨心理健康倡议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688447.md#1">Costco推出Nike联名款运动鞋 转售价格飙涨</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688660.md#1">金价大跳水 大陆投资者经历从赚5万到倒贴4万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688457.md#1">印度学者：张又侠落马直接影响中共21大</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688459.md#1">陆媒票选最有好感艺人 佘诗曼成唯一入榜港星</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14687927.md#1">金钟国罕见公开爱妻身份 称一直把她当妹妹看</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689262.md#1">知名女歌手于文文贵州演唱会上晕倒送医</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688468.md#1">李嘉明晒片酬 自曝发视频吐槽后收到剧组拖欠款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688492.md#1">港姐吴文忻乳癌复发 癌细胞扩散至一重要器官</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688718.md#1">这些行为看似无害 但会让旅馆员工恼火</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/28/n14685989.md#1">2026年不容错过的旅行目的地</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689115.md#1">为什么小狗需要尾巴？ 有何作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688143.md#1">【车评】展现超级四驱实力 2025 Mitsubishi Outlander SEL</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687871.md#1">日式护肤九步法 层层养护润至极处</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/1/4/n14405764.htm">拜登总统表彰纽约市消防英雄 颁授英勇勋章</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/1/4/n14405764.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
